app/styles/app.scss
@import "variables.scss";

@import "ember-bootstrap/bootstrap";

@import "sb-admin-2.scss";


html, body { height: 100%; }
#loginForm {
	background:#eee;
	padding:30px;
}


#loginContainer.shaky {
  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
  transform: translate3d(0, 0, 0);
  backface-visibility: hidden;
  perspective: 1000px;
}

@keyframes shake {
  10%, 90% {
    transform: translate3d(-1px, 0, 0);
  }

  20%, 80% {
    transform: translate3d(2px, 0, 0);
  }

  30%, 50%, 70% {
    transform: translate3d(-4px, 0, 0);
  }

  40%, 60% {
    transform: translate3d(4px, 0, 0);
  }
}

// override sb-admin-2 overrides m(
#loginContainer .error {
	font-size: 3rem;
}

// x4E custom
.x4ex {
  color:rgb(127,19,19);
}
.black {
  color:$black;
}
.gray {
  color:#aaa;
}
// end x4E custom

